fix: remove overflow

--- a/styles.css
+++ b/styles.css
@@ -223,6 +223,7 @@ header {
     color: var(--dark);
     margin-bottom: 1rem;
     padding-top: 2rem;
+    overflow-x: hidden;
 }
 
 .principles .principles-image {
